--- a/University/css/blocks/header/header.css
+++ b/University/css/blocks/header/header.css
@@ -256,11 +256,13 @@
 
 .page-header {
   width: 100%;
-  height: 100vh;
-  background-image: url(../img/cup.jpg);
-  background-position: +83% +0%;
-  background-color: #000;
-  background-repeat: no-repeat; }
+  height: 100vh; }
+  .page-header__wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    background-image: url(../img/cup.jpg);
+    background-position: top top; }
   .page-header h1 {
     margin: 0;
     padding: 0;
@@ -279,7 +281,6 @@
   .page-header__about-site {
     width: 100%;
     height: 70%;
-    margin: 2% 0%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -318,7 +319,7 @@
 
 @media (min-width: 768px) {
   .page-header__about-site {
-    margin: 3% 0%; }
+    padding: 3% 0%; }
   .page-header__descript {
     font-size: 55px; }
   .page-header__title {
@@ -330,7 +331,7 @@
             background-size: cover;
     height: 90vh; }
     .page-header__about-site {
-      margin: 5% 0% 0% 0%;
+      padding: 5% 0% 0%;
       height: auto; }
     .page-header__descript {
       font-size: 60px; }
