--- a/University/css/blocks/main/turn/turn.css
+++ b/University/css/blocks/main/turn/turn.css
@@ -75,9 +75,11 @@
       margin-top: 5%;
       text-align: center;
       line-height: 1.4; }
-    .turn__is-list {
-      padding-bottom: 40px;
-      border-bottom: 2px solid #d80b4a; } }
+    .turn__line {
+      -webkit-transform: rotate(90deg);
+          -ms-transform: rotate(90deg);
+              transform: rotate(90deg);
+      height: 50px; } }
 
 @media (min-width: 768px) {
   .turn .wave {
@@ -85,7 +87,9 @@
   .turn__is-item {
     text-align: center; }
   .turn__sks-item {
-    text-align: center; } }
+    text-align: center; }
+  .turn__line {
+    height: 100px; } }
 
 @media (min-width: 1200px) {
   .turn__wrapper {
@@ -107,11 +111,14 @@
     margin-top: 2%;
     text-align: right; }
   .turn__is-list {
-    padding-right: 200px;
-    border-right: 1px solid red;
     border-bottom: 0px;
     padding-bottom: 0px; }
   .turn__is-item {
     text-align: left; }
   .turn__sks-item {
-    text-align: left; } }
+    text-align: left; }
+  .turn__line {
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
+    height: auto; } }
