--- a/University/css/blocks/main/students/students.css
+++ b/University/css/blocks/main/students/students.css
@@ -46,7 +46,11 @@
       font-size: 20px;
       text-align: center; }
     .students__comments {
-      text-align: center; } }
+      text-align: center; }
+    .students__line {
+      margin-top: 5% !important;
+      width: 60% !important;
+      margin: 0 auto; } }
 
 @media (min-width: 768px) {
   .students {
@@ -62,7 +66,9 @@
     .students__comments {
       width: 60%;
       margin: 0 auto;
-      text-align: center; } }
+      text-align: center; }
+    .students__line {
+      width: 35% !important; } }
 
 @media (min-width: 1200px) {
   .students {
@@ -76,4 +82,6 @@
       width: 40%; }
     .students .owl-nav {
       position: absolute;
-      top: 40%; } }
+      top: 40%; }
+    .students__line {
+      width: 28% !important; } }
